# Shathi

./: .env.example  .gitattributes  .gitignore  .output.txt  API_ENDPOINTS.md  capacitor.config.ts  components.json  docker-compose.yml  eslint.config.mjs  insights.html  next.config.ts  out.txt  package-lock.json  package.json  probe.mjs  probe.out  render.yaml  research_notes_ai.txt  research_notes_chat.txt  research_notes_crisis.txt  research_notes_moodinf.txt  skills-lock.json  tailwind.config.cjs  tsc-out.txt  vercel.json
backend/: ...sereni.db  .dockerignore  .env.example  Dockerfile  README.md  SUPABASE_MIGRATION.md  SUPABASE_SCHEMA_STATUS.md  _err.py  _t.py  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-py314.txt  requirements.txt  smoke.py  start.ps1  test_admin_api.py  test_admin_api_output.txt  test_config.py  test_db.py  test_dir.py  test_path.py  test_url.py  users.txt
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: __init__.py  _bootstrap.py  apply_migrations.py  check_dependencies.py  check_pinecone.py  check_supabase.py  check_upstash.py  create_admin_user.py  make_user_admin.py  run_migrations.ps1  run_migrations.sh
backend/tests/: test_admin_routes.py  test_auth_dependencies.py  test_chat_builder.py  test_chat_context.py  test_chat_language.py  test_chat_style.py  test_config_validation.py  test_cors.py  test_crisis.py  test_dependency_degradation.py  test_errors.py  test_google_auth.py  test_health_routes.py  test_lifespan_shutdown.py  test_mood_inference.py  test_mood_routes.py  (+11 more)
(+332 files in other folders)
