[tool.poetry]
name = "Sathi-backend"
version = "0.1.0"
description = "AI Mental Wellness Companion Backend"
authors = ["Sathi Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
supabase = "^2.10.0"
openai = "^1.54.0"
httpx = "^0.27.0"
python-multipart = "^0.0.17"
email-validator = "^2.2.0"
tenacity = "^9.0.0"
structlog = "^24.4.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}
pinecone-client = "^5.0.0"
transformers = "^4.46.0"
torch = "^2.5.0"
sentence-transformers = "^3.3.0"
numpy = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.0"
flake8 = "^7.1.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

